ames/pds_web/test-data/volumes/bad/index/offsetRows.TAB
xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
"data/spectrumtable.lbl                       ","CALYPSO_REV8                   ","2007-06-13T10:00:00","S/ASTROM/HST/WFPC2/2005-01-14/CALYPSO_REV8   ","CALYPSO   ","2003-10-02T04:15:01.3","2005-01-14T03:00:16.7",93   